Wed Sep 29 13:54:59 1999  Loic Dachary  <loic@yoda.ceic.com>

	* fix all inline method declarations so that they are always declared
	  inline in the class declaration if an inline definition follows.

	* acinclude.m4: also search apache in /usr/local/apache/bin by default.

	* fix various warnings of gcc-2.95, now compiles ok without warnings
	  and with -Wall.

	* htlib/htString.h: removed commented out inline get

	* test/testnet.cc: add includes for optarg

Tue Sep 28 18:56:36 1999  Loic Dachary  <loic@ceic.com>

	* Makefile.config (HTLIBS): libhtnet at the beginning of the list. It
	  matters on Solaris-2.6 for instance.

	* test/testnet.cc: change times to timesvar to avoid conflict with
	  function (was warning only on Solaris-2.6).
	
	* htdig,htsearch,htmerge,test/word are purify clean when running
	  make check.

Tue Sep 28 18:23:49 1999  Loic Dachary  <loic@ceic.com>

	* htmerge/words.cc (mergeWords): use WordList::Walk to avoid loading ALL 
	  the words into memory.

	* htlib/DB2_db.cc (Open): we don't want duplicates. Big mistake. If DUP is
	  on, every put for update will insert a new entry.

	* htcommon/WordList.cc (Delete): separate Delete (straight Delete and WalkDelete) 
	  to avoid accessing dbf from outside WordList.

	* htcommon/WordList.cc (Walk): now promoted to public. 
	
Tue Sep 28 16:34:56 1999  Loic Dachary  <loic@ceic.com>

	* test/word.cc (dolist): Add regression tests for Delete.

	* htcommon/WordList.cc (Delete): Reimplement from scratch. Use Walk
	  to find records to delete. This allows to say delete all occurence
	  of this word, delete all words in this document (slow), delete
	  all occurences of this word in this document etc.

	* htcommon/WordList.cc (Walk): extend so that it handles walk for
	  partially specified keys, remains fully backward compatible. It allows
	  to extract all the words in a specific document (slow) or all occurences
	  of a word in a specific document etc.
